adding google image logo

--- a/advanced.html
+++ b/advanced.html
@@ -9,10 +9,7 @@
 <body>
     <ul>
         <li>
-            <a href="image.html">Image</a>
-        </li>
-        <li>
-            <a href="advanced.html">Advanced</a>
+            <a href="index.html">Google Search</a>
         </li>
     </ul>
     <div class="search_warper">
