--- a/image.html
+++ b/image.html
@@ -9,14 +9,11 @@
 <body>
     <ul>
         <li>
-            <a href="image.html">Image</a>
-        </li>
-        <li>
-            <a href="advanced.html">Advanced</a>
+            <a href="index.html">Google Search</a>
         </li>
     </ul>
     <div class="search_warper">
-        <img src="googlelogo_color_272x92dp.png" alt="googlelogo">
+        <img src="googlelogo_images.png" alt="googlelogo">
         <form action="https://www.google.com/search">
             <input class="search-box" type="text" name="q">
             <span id="search"><i class="fa-solid fa-magnifying-glass"></i></span>
