image search functioning

--- a/image.html
+++ b/image.html
@@ -14,7 +14,8 @@
     </ul>
     <div class="search_warper">
         <img src="googlelogo_images.png" alt="googlelogo">
-        <form action="https://www.google.com/search">
+        <span class="g-images">images</span>
+        <form action="http://images.google.com/images">
             <input class="search-box" type="text" name="q">
             <span id="search"><i class="fa-solid fa-magnifying-glass"></i></span>
 
