--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         </li>
     </ul>
     <div class="search_warper">
-        <img src="googlelogo_color_272x92dp.png" alt="googlelogo">
+        <img src="googlelogo_images.png" alt="googlelogo">
+        
         <form action="https://www.google.com/search">
             <input class="search-box" type="text" name="q">
             <span id="search"><i class="fa-solid fa-magnifying-glass"></i></span>
