--- a/image.html
+++ b/image.html
@@ -21,8 +21,8 @@
 
             </input>
             <span class="search-buttons">
-                <input type="submit" value="Google Search">
-                <input type="submit" value="I'm Feeling Lucky">
+                <input type="submit" name="btnK" value="Google Search">
+                <input type="submit" name="btnI" value="I'm Feeling Lucky">
             </span>
 
         </form>
